--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#607D8B</color>
 
     <color name="colorfondo">#9CCC65</color>
+    <color name="colorNombreDepartamento">#000</color>
+
 </resources>
