--- a/app/src/main/res/layout/activity_ayacucho.xml
+++ b/app/src/main/res/layout/activity_ayacucho.xml
@@ -69,6 +69,7 @@
                 android:layout_alignParentEnd="true"
                 android:paddingRight="@dimen/paddinRight_item_hotel_rest_aero"
                 android:paddingTop="@dimen/paddingTop_item_hotel_rest_aero"
+                android:onClick="reserva_vuelo"
                 />
 
 
