--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#FFD180</color>
     <color name="colorAccent">#607D8B</color>
 
-    <color name="colorfondo">#9CCC65</color>
+    <color name="colorfondo">#76FF03</color>
     <color name="colorNombreDepartamento">#000</color>
 
 </resources>
