--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="paddin_right_hotel">40dp</dimen>
     <dimen name="paddinRight_item_hotel_rest_aero">50dp</dimen>
     <dimen name="paddingTop_item_hotel_rest_aero">50dp</dimen>
+    <dimen name="margin_top_reserva">10dp</dimen>
 </resources>
